--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
     </style>
     <</head>
     <h1 class="color">venta de equipos</h1>
+    <table>
+        <th>
+            <td><Equipos</td>
+            <td>marca</td>
+        </th>
+        <tr>
+            <td>mo1l-23</td>
+            <td>asus</td>
+        </tr>
+    </table>
 </body>
 </html>
